feat(shopping): image shopping experience

--- a/.env
+++ b/.env
@@ -1,5 +1,15 @@
 # These variables are only available in your SST code.
 # To apply them to your Lambda functions, checkout this doc - https://docs.serverless-stack.com/environment-variables#environment-variables-in-lambda-functions
 
-CREATE_CEREBRUM_IMAGES_FUNCTION_NAME=create-cerebrum-images-dev
+# Function names
+CREATE_CEREBRUM_IMAGE_METADATA_FUNCTION_NAME=create-cerebrum-image-metadata-dev
+HANDLE_CEREBRUM_IMAGE_SELECTION_EXPERIENCE_FUNCTION_NAME=handle-cerebrum-image-selection-experience-dev
+HANDLE_CEREBRUM_IMAGE_REQUEST_FUNCTION_NAME=handle-cerebrum-image-request-dev
+
+# Tables
 CEREBRUM_IMAGE_METADATA_TABLE_NAME=cerebrum-image-metadata
+
+# Buckets
+CEREBRUM_IMAGE_BUCKET_NAME=cerebrum-image-dev
+CEREBRUM_IMAGE_ZIP_BUCKET_NAME=cerebrum-image-zip-dev
+
