feat(order): refactor and complete some order missing pieces

--- a/.env
+++ b/.env
@@ -8,8 +8,9 @@ HANDLE_CEREBRUM_IMAGE_REQUEST_FUNCTION_NAME=handle-cerebrum-image-request-dev
 
 # Tables
 CEREBRUM_IMAGE_METADATA_TABLE_NAME=cerebrum-image-metadata
+CEREBRUM_IMAGE_ORDER_TABLE_NAME=cerebrum-image-order
 
 # Buckets
 CEREBRUM_IMAGE_BUCKET_NAME=cerebrum-image-dev
 CEREBRUM_IMAGE_ZIP_BUCKET_NAME=cerebrum-image-zip-dev
-
+ZIP_LINK_EXPIRY=1209600 # expire the Zip link in two weeks
