--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 CREATE_CEREBRUM_IMAGE_METADATA_FUNCTION_NAME=create-cerebrum-image-metadata-dev
 HANDLE_CEREBRUM_IMAGE_FULFILLMENT_FUNCTION_NAME=handle-cerebrum-image-fulfillment-dev
 HANDLE_CEREBRUM_IMAGE_SEARCH_FUNCTION_NAME=handle-cerebrum-image-search-dev
+HANDLE_CEREBRUM_IMAGE_TRANSFER_FUNCTION_NAME=handle-cerebrum-image-transfer-dev
 CREATE_CEREBRUM_IMAGE_ORDER_FUNCTION_NAME=create-cerebrum-image-order-dev
 
 # Tables
@@ -13,5 +14,9 @@ CEREBRUM_IMAGE_ORDER_TABLE_NAME=cerebrum-image-order
 
 # Buckets
 CEREBRUM_IMAGE_BUCKET_NAME=cerebrum-image-dev
+CEREBRUM_IMAGE_ODP_BUCKET_NAME=cerebrum-image-odp-dev
 CEREBRUM_IMAGE_ZIP_BUCKET_NAME=cerebrum-image-zip-dev
 ZIP_LINK_EXPIRY=1209600 # expire the Zip link in two weeks
+
+# IAM
+CEREBRUM_IMAGE_ODP_ROLE_ARN=arn:aws:iam::889209933933:role/CharcotImageWriteRole
