feat(fulfillment): read images from ODP account

--- a/.env
+++ b/.env
@@ -2,21 +2,21 @@
 # To apply them to your Lambda functions, checkout this doc - https://docs.serverless-stack.com/environment-variables#environment-variables-in-lambda-functions
 
 # Function names
-CREATE_CEREBRUM_IMAGE_METADATA_FUNCTION_NAME=create-cerebrum-image-metadata-dev
-HANDLE_CEREBRUM_IMAGE_FULFILLMENT_FUNCTION_NAME=handle-cerebrum-image-fulfillment-dev
-HANDLE_CEREBRUM_IMAGE_SEARCH_FUNCTION_NAME=handle-cerebrum-image-search-dev
-HANDLE_CEREBRUM_IMAGE_TRANSFER_FUNCTION_NAME=handle-cerebrum-image-transfer-dev
-CREATE_CEREBRUM_IMAGE_ORDER_FUNCTION_NAME=create-cerebrum-image-order-dev
+CREATE_CEREBRUM_IMAGE_METADATA_FUNCTION_NAME=create-cerebrum-image-metadata
+HANDLE_CEREBRUM_IMAGE_FULFILLMENT_FUNCTION_NAME=handle-cerebrum-image-fulfillment
+HANDLE_CEREBRUM_IMAGE_SEARCH_FUNCTION_NAME=handle-cerebrum-image-search
+HANDLE_CEREBRUM_IMAGE_TRANSFER_FUNCTION_NAME=handle-cerebrum-image-transfer
+CREATE_CEREBRUM_IMAGE_ORDER_FUNCTION_NAME=create-cerebrum-image-order
 
 # Tables
 CEREBRUM_IMAGE_METADATA_TABLE_NAME=cerebrum-image-metadata
 CEREBRUM_IMAGE_ORDER_TABLE_NAME=cerebrum-image-order
 
 # Buckets
-CEREBRUM_IMAGE_BUCKET_NAME=cerebrum-image-dev
-CEREBRUM_IMAGE_ODP_BUCKET_NAME=cerebrum-image-odp-dev
-CEREBRUM_IMAGE_ZIP_BUCKET_NAME=cerebrum-image-zip-dev
+CEREBRUM_IMAGE_BUCKET_NAME=nbtr-odp-staging
+CEREBRUM_IMAGE_ODP_BUCKET_NAME=nbtr-production
+CEREBRUM_IMAGE_ZIP_BUCKET_NAME=cerebrum-image-zip
 ZIP_LINK_EXPIRY=1209600 # expire the Zip link in two weeks
 
-# IAM
-CEREBRUM_IMAGE_ODP_ROLE_ARN=arn:aws:iam::889209933933:role/CharcotImageWriteRole
+# Misc
+FROM_EMAIL=joquijada2010@gmail.com
