--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test": "sst test --coverage --transform '{}' --preset 'ts-jest' --coveragePathIgnorePatterns 'coverage' --coveragePathIgnorePatterns '.build' --coveragePathIgnorePatterns 'test' --coveragePathIgnorePatterns 'd.ts' --coveragePathIgnorePatterns 'stacks/'",
     "start": "AWS_PROFILE=default sst start",
     "build": "sst build",
-    "deploy": "AWS_PROFILE=default sst deploy",
+    "deploy": "sst deploy",
     "lint": "eslint -c .eslintrc.yml --no-eslintrc ./",
     "lint:fix": "eslint -c .eslintrc.yml --no-eslintrc --fix ./",
     "remove": "sst remove"
@@ -46,7 +46,7 @@
   },
   "dependencies": {
     "@aws-cdk/core": "1.132.0",
-    "@exsoinn/aws-sdk-wrappers": "^1.9.0",
+    "@exsoinn/aws-sdk-wrappers": "^1.9.1",
     "@serverless-stack/cli": "0.53.0",
     "@serverless-stack/resources": "0.53.0",
     "lodash.merge": "^4.6.2",
