feat(ui): select/unselect functionality, cart, dimensions endpoint

--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@
 CREATE_CEREBRUM_IMAGE_METADATA_FUNCTION_NAME=create-cerebrum-image-metadata
 HANDLE_CEREBRUM_IMAGE_FULFILLMENT_FUNCTION_NAME=handle-cerebrum-image-fulfillment
 HANDLE_CEREBRUM_IMAGE_SEARCH_FUNCTION_NAME=handle-cerebrum-image-search
+HANDLE_CEREBRUM_IMAGE_DIMENSION_FUNCTION_NAME=handle-cerebrum-image-dimension
 HANDLE_CEREBRUM_IMAGE_TRANSFER_FUNCTION_NAME=handle-cerebrum-image-transfer
 CREATE_CEREBRUM_IMAGE_ORDER_FUNCTION_NAME=create-cerebrum-image-order
 
