--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,9 @@
     "antd": "^4.18.8",
     "aws-amplify": "^4.3.14",
     "bootstrap": "^5.1.3",
+    "highcharts": "^10.0.0",
+    "highcharts-react-official": "^3.1.0",
+    "lodash.merge": "^4.6.2",
     "material-ui-confirm": "^3.0.3",
     "react": "^17.0.2",
     "react-awesome-query-builder": "^5.0.0",
