--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "material-ui-confirm": "^3.0.3",
     "react": "^17.0.2",
     "react-awesome-query-builder": "^5.0.0",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.5.0-beta.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
