--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "scripts": {
     "test": "sst test --coverage --transform '{}' --preset 'ts-jest' --coveragePathIgnorePatterns 'coverage' --coveragePathIgnorePatterns '.build' --coveragePathIgnorePatterns '.sst' --coveragePathIgnorePatterns 'test' --coveragePathIgnorePatterns 'd.ts' --coveragePathIgnorePatterns 'stacks/'",
     "start": "AWS_PROFILE=default sst start --stage demo",
-    "build": "sst build",
-    "deploy": "sst deploy",
+    "build": "AWS_PROFILE=default sst build",
     "deploy:demo": "./script/deploy.mjs deploy -p default -o alt -s demo",
     "deploy:dev": "./script/deploy.mjs deploy -p mssm -o mssm-odp -s dev",
     "deploy:prod": "./script/deploy.mjs deploy -p mssm -o mssm-odp -s prod",
@@ -50,14 +49,16 @@
     "eslint-plugin-promise": "^5.1.1",
     "json-array-streams": "^1.0.1",
     "ts-jest": "^27.1.0",
-    "yargs": "^17.3.1"
+    "yargs": "^17.3.1",
+    "eslint-config-serverless-stack": "^0.69.7"
   },
   "dependencies": {
     "@exsoinn/aws-sdk-wrappers": "^1.10.4",
-    "@serverless-stack/cli": "0.60.11",
-    "@serverless-stack/resources": "0.60.11",
-    "aws-cdk-lib": "2.7.0",
+    "@serverless-stack/cli": "1.4.0",
+    "@serverless-stack/resources": "^1.4.0",
+    "aws-cdk-lib": "2.24.0",
     "change-case": "^4.1.2",
+    "eslint-config-serverless-stack": "^0.69.7",
     "lodash.merge": "^4.6.2",
     "nodemailer": "^6.7.2",
     "pluralize": "^8.0.0",
