feat(fulfillment): update from email

--- a/.env
+++ b/.env
@@ -20,4 +20,4 @@ CEREBRUM_IMAGE_ZIP_BUCKET_NAME=cerebrum-image-zip
 ZIP_LINK_EXPIRY=1209600 # expire the Zip link in two weeks
 
 # Misc
-FROM_EMAIL=joquijada2010@gmail.com
+FROM_EMAIL=no-reply@mountsinaicharcot.org
