feat(fulfillment): container based fulfillment to remove time and memory limits that AWS Lambda imposes

--- a/.env
+++ b/.env
@@ -3,7 +3,6 @@
 
 # Function names
 CREATE_CEREBRUM_IMAGE_METADATA_FUNCTION_NAME=create-cerebrum-image-metadata
-HANDLE_CEREBRUM_IMAGE_FULFILLMENT_FUNCTION_NAME=handle-cerebrum-image-fulfillment
 HANDLE_CEREBRUM_IMAGE_SEARCH_FUNCTION_NAME=handle-cerebrum-image-search
 HANDLE_CEREBRUM_IMAGE_DIMENSION_FUNCTION_NAME=handle-cerebrum-image-dimension
 HANDLE_CEREBRUM_IMAGE_TRANSFER_FUNCTION_NAME=handle-cerebrum-image-transfer
@@ -21,3 +20,4 @@ ZIP_LINK_EXPIRY=1209600 # expire the Zip link in two weeks
 
 # Misc
 FROM_EMAIL=no-reply@mountsinaicharcot.org
+FULFILLMENT_HOST=fulfillment.mountsinaicharcot.org
