--- a/fulfillment/src/main/resources/application-dev.yml
+++ b/fulfillment/src/main/resources/application-dev.yml
@@ -4,6 +4,11 @@ charcot:
       table:
         name:
           dev-charcot-cerebrum-image-order
+    image:
+      metadata:
+        table:
+          name:
+            dev-charcot-cerebrum-image-metadata
   s3:
     zip:
       bucket:
