feat(fulfillment): use sqs with step-scaling for fulfillment

--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ HANDLE_CEREBRUM_IMAGE_DIMENSION_FUNCTION_NAME=handle-cerebrum-image-dimension
 HANDLE_CEREBRUM_IMAGE_TRANSFER_FUNCTION_NAME=handle-cerebrum-image-transfer
 CREATE_CEREBRUM_IMAGE_ORDER_FUNCTION_NAME=create-cerebrum-image-order
 
+# Queues
+CEREBRUM_IMAGE_ORDER_QUEUE_NAME=cerebrum-image-order-queue
+
 # Tables
 CEREBRUM_IMAGE_METADATA_TABLE_NAME=cerebrum-image-metadata
 CEREBRUM_IMAGE_ORDER_TABLE_NAME=cerebrum-image-order
