--- a/.env
+++ b/.env
@@ -7,6 +7,7 @@ HANDLE_CEREBRUM_IMAGE_SEARCH_FUNCTION_NAME=handle-cerebrum-image-search
 HANDLE_CEREBRUM_IMAGE_DIMENSION_FUNCTION_NAME=handle-cerebrum-image-dimension
 HANDLE_CEREBRUM_IMAGE_TRANSFER_FUNCTION_NAME=handle-cerebrum-image-transfer
 CREATE_CEREBRUM_IMAGE_ORDER_FUNCTION_NAME=create-cerebrum-image-order
+RETRIEVE_CEREBRUM_IMAGE_ORDER_FUNCTION_NAME=retrieve-cerebrum-image-order
 
 # Queues
 CEREBRUM_IMAGE_ORDER_QUEUE_NAME=cerebrum-image-order-queue
