--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "bootstrap": "^5.1.3",
     "highcharts": "^10.0.0",
     "highcharts-react-official": "^3.1.0",
+    "js-joda": "^1.11.0",
     "lodash.merge": "^4.6.2",
     "material-ui-confirm": "^3.0.3",
     "react": "^17.0.2",
