fix(dev): fix dev environment which broke after upgrade to SST 2.x

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "sst-env -- react-scripts start",
+    "start": "AWS_PROFILE=mssm sst env 'react-scripts start' --stage debug",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
