fix(transaction): see below
- when page size requested exceeds number of items, the items are now all rendered
- in SST dev no longer get a 500 error, addressed by removing fileNames field from results, which can get quite large depending on the filter specified

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,7 +40,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "AWS_PROFILE=mssm sst env 'react-scripts start' --stage debug",
+    "dev": "AWS_PROFILE=mssm sst env 'react-scripts start' --stage debug",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
