--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react": "^17.0.2",
     "react-awesome-query-builder": "^5.0.0",
     "react-bootstrap": "^2.5.0-beta.0",
+    "react-bootstrap-table-next": "^4.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-router-bootstrap": "^0.25.0",
