feat(search): enhancements to filtering UI
- ability to toggle logical operator (OR or AND) of the fields within a dimension
- user friendly message when the filter applied yields to results
- make stain `MRI` uppercase
- add more prominent back button in review page footer

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ ZIP_LINK_EXPIRY=1209600 # expire the Zip link in two weeks
 
 # Misc
 FROM_EMAIL=no-reply@mountsinaicharcot.org
+
+FEAT_TOGGLE_LOGICAL_OP_ENABLED=false
