--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^28.1.3",
     "json-array-streams": "^1.0.1",
     "sst": "^2.0.23",
+    "through2": "^4.0.2",
     "ts-jest": "^28.0.7",
     "yargs": "^17.3.1"
   },
