--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,8 @@
     "highcharts-react-official": "^3.1.0",
     "js-joda": "^1.11.0",
     "lodash.debounce": "^4.0.8",
+    "lodash.difference": "^4.5.0",
+    "lodash.isequal": "^4.5.0",
     "lodash.merge": "^4.6.2",
     "material-ui-confirm": "^3.0.3",
     "react": "^17.0.2",
