--- a/fulfillment/Dockerfile
+++ b/fulfillment/Dockerfile
@@ -1,7 +1,7 @@
 FROM eclipse-temurin:17.0.4_8-jre
 
 # The STAGE needs to be a build-time argument because at build time is the only chance
-# we gert to specify the stage, a constraint created by aws-cdk-lib ContainerImage.fromAsset(), which accepts DockerImageAssetOptions.buildArgs(),
+# we get to specify the stage, a constraint created by aws-cdk-lib ContainerImage.fromAsset(), which accepts DockerImageAssetOptions.buildArgs(),
 # but nothing to override ENV's at runtime.
 ARG STAGE=debug
 ENV SPRING_PROFILE=$STAGE
