fix(fulfillment): stay within DynamoDB item size limit
Other
- Add spotless formatting for groovy
- Make scale in/out of fulfillmenr ECS tasks for cost effective

fix(fulfillment): stay within DynamoDB item size limit

Other: Add spotless formatting for groovy

fix(fulfillment): stay within DynamoDB item size limit

Other: Add spotless formatting for groovy

--- a/fulfillment/Dockerfile
+++ b/fulfillment/Dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:17.0.4_8-jre
 
 # The STAGE needs to be a build-time argument because at build time is the only chance
 # we get to specify the stage, a constraint created by aws-cdk-lib ContainerImage.fromAsset(), which accepts DockerImageAssetOptions.buildArgs(),
-# but nothing to override ENV's at runtime.
+# but nothing to override ENV's at runtime. In other words, the stage is baked into the image produced by this Docker file.
 ARG STAGE=debug
 ENV SPRING_PROFILE=$STAGE
 ENV AWS_PROFILE=mssm
