fix(fulfillment): refresh sqs receipt handle when finishing up request - Optimize to avoid lengthy bucket to files recalculation in retry scenarios - Add scripts to spotless styling

--- a/fulfillment/pom.xml
+++ b/fulfillment/pom.xml
@@ -141,6 +141,7 @@
                         <includes>
                             <include>src/main/groovy/**/*.groovy</include>
                             <include>src/test/groovy/**/*.groovy</include>
+                            <include>script/**/*.groovy</include>
                         </includes>
                         <importOrder/> <!-- standard import order -->
                         <removeSemicolons/> <!-- removes semicolons at the end of lines -->
